# camera

./: .env  PLAN-trainable-faces.md  README.md  audit_cgi_ptz.py  create_hotspot.py  detect_known_faces.py  discover_camera.py  encodings.pkl  face_detection.py  gestures_dataset.csv  gui_ptz_camera.py  intercept_yoosee.py  main.py  pyproject.toml  scan_cameras.py  test_audio_post.py  test_flash_light.py  test_jt8695.py  test_onvif_talkback.py  test_tcp_ports.py  view_camera.py  web_camera_lab.py
src/ai_vision/: collect_gesture_data.py  detect_custom_gestures.py  detect_gestures.py  detect_known_faces.py  train_gesture_model.py
src/apps/: esp_cam.py  gui_ptz_camera.py  gui_reolink.py  reolink_camera.py
src/camera_exploits/: audit_audio.py  audit_flash_light.py  check_camera_commands.py  inject_magic_packet.py  test_default_ports.py  test_flash_http.py  test_onvif_talkback.py  test_onvif_zeep.py  test_port_50000.py  test_ptz_payloads.py  test_webcam.py  test_xm_flash_quick.py
src/networking/: share_wifi.py
